css/style.css
/* General */

/* TODO: add media query to change font sizes on small screens */

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

body {
    font-family: 'Roboto', 'Helvetica', sans-serif;
    font-size: 20px;
    margin: auto;
    color: white;
    background-color: black;
}

h1, h2, h3 {
    font-family: 'Zilla Slab', serif;
}

header {
    background-color: #EAAA00;
    padding-left: 1em;
}

main {
    background: no-repeat url("../static/DSC_3174.jpg") top/cover scroll;
    padding-bottom: 1em;
    background-position: center -60px;
}

footer {
  font-size: .6em;
  padding-left: 1rem;
  width: 100%;
  height: auto;
}

footer a, a:visited {
  color: inherit;
}

a {
  color: #004F9F;
}

a:hover, a:focus {
  color: #1879DB;
}

.container {
    display: flex;
    flex: auto;
    flex-wrap: wrap;
    align-content: center;
}

.unsupported-browser {
    display: none;
    font-size: 1.2em;
    color: black;
    height: 3em;
    /* Thanks, Github */
    background-image: linear-gradient(#f7f7f7, #eaeaea);
}

.no-cssgrid header {
    padding-left: 0;
}

.no-cssgrid .unsupported-browser {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.no-cssgrid main {
    /* Required by IE to display background image for some reason */
    display: block;
}

.no-cssgrid .content {
    display: flex;
    flex-direction: column;
}

.no-cssgrid .grid-box {
    margin-bottom: 1em;
}

/*** NAV ***/

.navbar {
    font-family: 'Zilla Slab', serif;
    font-size: 1.25em;
}

.navbar ul {
    list-style: none;
    padding: 0 0;
    margin: 0 0;
}

.navbar a {
    text-decoration: none;
    color: black;
}

.navbar ul li {
    padding: 5px;
    position: relative;
}

.navbar li:hover {
    background-color: #F5D580;
    transition: ease .25s;
}

.navbar img {
    max-height: 1em;
}

#linkedin {
    margin-left: auto;
}

#github-icon {
    padding-right: 1em;
    margin-left: 2px;
}

#github-li:hover, #linkedin:hover {
    background-color: inherit;
}

/** DROPDOWN **/

.dropdown img {
    padding: 0 .2em;
}

/* Set all dropdown properties now, take it out of document flow with position: absolute; and hide it with visibility
as we cannot animate it if display is set to none */

.dropdown ul {
    /* account for .navbar ul li margin */
    margin: 5px auto;
    display: block;
    position: absolute;
    left: -9999vw;
    opacity: 0;
    background-color: #EAAA00;
    text-align: center;
    min-width: 100%;
    animation: drop-out .25s;
}

.dropdown li:hover {
    background-color: #F5D580;
}

.dropdown ul li {
    padding: 2px 0;
}

/* And here is the actual magic */

.dropdown:hover > ul, .dropdown:focus-within > ul, .dropdown > ul:hover {
   animation: drop-in .25s;
   animation-fill-mode: forwards;
}

/* drop in by secretly moving to the left, then only animating opacity  */

@keyframes drop-in {
    0% {
        left: 0;
        opacity: 0;
    }
    100% {
        left: 0;
        opacity: 1;
    }
}

/* Drop out by animating opacity, then secretly moving to the left */

@keyframes drop-out {
    0% {
        opacity: 1;
        left: 0;
    }
    99.9999% {
        opacity: 0;
        left: 0;
    }
    100% {
        left: -9999vw;
    }
}

/*** CONTENT ***/

.content {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto repeat(3, auto);
    grid-column-gap: 40vw;
    margin: 0 1em;
    grid-row-gap: 5vh;
}

/* For blocks of content */

.content h1 {
    font-size: 3em;
    grid-column: 1 / -1;
    text-align: center;
    margin-top: .5em;
}

.content h2 {
    font-size: 2em;
    margin-top: auto;
}

.grid-box {
  background: rgba(255, 255, 255, 0.4);
  border: rgba(0, 0, 0, 0.2) 1px solid;
  border-radius: .5em;
  padding-left: 2%;
  padding-right: 2%;
  color: black;
  box-shadow: 2px 2px 1px rgba(0,0,0, .2);
}

.grid-box > ul {
    list-style-position: inside;
    padding-left: 0;
}

/* For construction notification */

.hide {
    display: none;
}

.show {
    display: block;
}

#lang-overlay {
    position: fixed;
    top: 0;
    height: 100%;
    width: 100%;
    background: black;
    text-align: center;
    padding-top: 10%;
    font-size: 2em;
    /* Hebrew in serif fonts is horrific */
    font-family: 'Zilla Slab', sans-serif;
}

/* Reduce font size, transition from grid to column on small devices */
@media all and (max-width: 7in), (min-resolution: 144dpi),
(-webkit-min-device-pixel-raito: 1.5) {

    main {
      background-position: top;
    }

    .content {
        font-size: .8em;
        display: flex;
        flex-direction: column;
    }

    .grid-box {
      margin-bottom: 1em;
    }

    .navbar {
        font-size: 1.5em;
    }
}

